--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Erik F. Alvarez</title>
+  <style>
+    body {
+      font-family: Georgia, serif;
+      max-width: 700px;
+      margin: 2em auto;
+      padding: 0 1em;
+      line-height: 1.6;
+    }
+    h1, h2 {
+      font-weight: normal;
+    }
+    a {
+      color: #0366d6;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>Erik Alvarez</h1>
+  <p>I'm a researcher at RISE working on optimization and planning of power systems.</p>
 
+  <p>Email: yourname [at] domain [dot] com</p>
+  <p><a href="https://www.linkedin.com/in/erik-alvarez-29235b84/">LinkedIn</a> |
+     <a href="https://github.com/yourusername">GitHub</a> |
+     <a href="cv.pdf">CV</a></p>
+
+  <h2>Research Interests</h2>
+  <ul>
+    <li>Transmission expansion planning</li>
+    <li>Stochastic optimization</li>
+    <li>Electricity markets</li>
+    <li>Sector coupling and energy systems integration</li>
+  </ul>
+
+  <h2>Recent Projects</h2>
+  <p>I'm involved in projects like:</p>
+  <ul>
+    <li><strong>NordForsk</strong> – No-regret investments under uncertainty</li>
+    <li><strong>EnergyFlex-SE</strong> – Flexibility from distributed energy resources</li>
+  </ul>
+
+  <h2>Publications</h2>
+  <p>Coming soon...</p>
+</body>
+</html>
