--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 </head>
 <body>
   <h1>Erik Alvarez</h1>
-  <p>I'm a researcher at RISE working on optimization and planning of power systems.</p>
+<!--  <p>I'm a researcher at RISE working on optimization and planning of power systems.</p>-->
+  <p><a href="https://www.ri.se/sv/">RISE Research Institutes of Sweden</a></p>
 
   <p>Email: yourname [at] domain [dot] com</p>
   <p><a href="https://www.linkedin.com/in/erik-alvarez-29235b84/">LinkedIn</a> |
