--- a/index.html
+++ b/index.html
@@ -5,28 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Erik F. Alvarez</title>
   <link rel="icon" type="image/png" href="icon.png">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Georgia, serif;
-      max-width: 700px;
-      margin: 2em auto;
-      padding: 0 1em;
-      line-height: 1.6;
-    }
-    h1, h2 {
-      font-weight: normal;
-    }
-    a {
-      color: #0366d6;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
+      .name {
+        font-family: 'Poppins', sans-serif;
+        font-size: 2.8em;
+        margin-bottom: 0.2em;
+      }
+      .firstname {
+        font-weight: 700; /* bold */
+      }
+      .lastname {
+        font-weight: 400; /* normal */
+      }
   </style>
 </head>
 <body>
-  <h1>Erik Alvarez</h1>
+  <h1 class="name"><span class="firstname">Erik</span> <span class="lastname">Alvarez</span></h1>
 <!--  <p>I'm a researcher at RISE working on optimization and planning of power systems.</p>-->
   <p><a href="https://www.ri.se/sv/">RISE Research Institutes of Sweden</a></p>
 
