--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <link rel="icon" type="image/png" href="icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <style>
+        body {
+        font-family: Georgia, serif;
+        max-width: 700px;
+        margin: 0 auto;
+        padding: 2em 1em;
+        line-height: 1.6;
+        text-align: center; /* This centers text inside the body */
+        }
       .name {
         font-family: 'Poppins', sans-serif;
         font-size: 2.8em;
@@ -27,7 +35,7 @@
 
   <p>Email: yourname [at] domain [dot] com</p>
   <p><a href="https://www.linkedin.com/in/erik-alvarez-29235b84/">LinkedIn</a> |
-     <a href="https://github.com/yourusername">GitHub</a> |
+     <a href="https://github.com/erikfilias">GitHub</a> |
      <a href="cv.pdf">CV</a></p>
 
   <h2>Research Interests</h2>
