--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         body {
         font-family: Georgia, serif;
         max-width: 700px;
-        margin: 0 auto;
-        padding: 2em 1em;
+        margin: 2em auto;
+        padding: 0 1em;
         line-height: 1.6;
-        text-align: center; /* This centers text inside the body */
+<!--        text-align: center; /* This centers text inside the body */-->
         }
       .name {
         font-family: 'Poppins', sans-serif;
