--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Erik F. Alvarez</title>
   <link rel="icon" type="image/png" href="icon.png">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
   <style>
         body {
         font-family: Georgia, serif;
@@ -24,12 +24,12 @@
         font-weight: 700; /* bold */
       }
       .lastname {
-        font-weight: 400; /* normal */
+        font-weight: 400; /* italic */
       }
   </style>
 </head>
 <body>
-  <h1 class="name"><span class="firstname">Erik</span> <span class="lastname">Alvarez</span></h1>
+  <h1 class="name"><span class="firstname">Erik F.</span> <span class="lastname">Alvarez</span></h1>
 <!--  <p>I'm a researcher at RISE working on optimization and planning of power systems.</p>-->
   <p><a href="https://www.ri.se/sv/">RISE Research Institutes of Sweden</a></p>
 
