--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-  <h1 class="name"><span class="firstname">Erik F.</span> <span class="lastname">Alvarez</span></h1>
+  <h1 class="name"><span class="firstname">Erik F. Alvarez</span> <span class="lastname"></span></h1>
 <!--  <p>I'm a researcher at RISE working on optimization and planning of power systems.</p>-->
   <p><a href="https://www.ri.se/sv/">RISE Research Institutes of Sweden</a></p>
 
