--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         font-size: 2.6em;
         margin-top: 1em;
       }
-        
+
       .name {
         font-family: 'Poppins', sans-serif;
         font-size: 2.8em;
@@ -83,6 +83,26 @@
     <a href="cv.pdf">cv</a>
   </nav>
 </header>
+
+<h1 class="name"><span class="firstname">Erik</span> <span class="lastname">Alvarez</span></h1>
+
+<section id="about">
+  <h2>About</h2>
+  <p>Short bio or description...</p>
+</section>
+
+<section id="publications">
+  <h2>Publications</h2>
+  <p>Coming soon...</p>
+</section>
+
+<section id="projects">
+  <h2>Projects</h2>
+  <ul>
+    <li>NordForsk — No-regret investments</li>
+    <li>EnergyFlex-SE — Distributed flexibility</li>
+  </ul>
+</section>
 
   <h1 class="name"><span class="firstname">Erik F. Alvarez</span> <span class="lastname"></span></h1>
 <!--  <p>I'm a researcher at RISE working on optimization and planning of power systems.</p>-->
