--- a/index.html
+++ b/index.html
@@ -68,12 +68,11 @@
 <body>
 <header class="top-nav">
   <div class="left-icons">
-    <a href="mailto:you@example.com" title="Email"><i class="fas fa-envelope"></i></a>
-    <a href="https://orcid.org/your-id" title="ORCID"><i class="fab fa-orcid"></i></a>
-    <a href="https://scholar.google.com/your-scholar" title="Google Scholar"><i class="fab fa-google"></i></a>
-    <a href="https://github.com/yourusername" title="GitHub"><i class="fab fa-github"></i></a>
-    <a href="https://linkedin.com/in/yourprofile" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-    <a href="https://twitter.com/yourhandle" title="Twitter"><i class="fab fa-twitter"></i></a>
+    <a href="mailto:erik.alvarez@ri.se" title="Email"><i class="fas fa-envelope"></i></a>
+    <a href="https://orcid.org/0000-0003-3862-9747" title="ORCID"><i class="fab fa-orcid"></i></a>
+    <a href="https://scholar.google.com/citations?user=iextGGkAAAAJ&hl=en" title="Google Scholar"><i class="fab fa-google"></i></a>
+    <a href="https://github.com/erikfilias" title="GitHub"><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/erik-alvarez-29235b84/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
   </div>
 
   <nav class="nav-links">
