--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
   <nav class="nav-links">
     <a href="#about" class="active">about</a>
-    <a href="#publications">publications</a>
+    <a href="#publications.html">publications</a>
     <a href="#projects">projects</a>
-    <a href="cv.pdf">cv</a>
+    <a href="CV - Erik Alvarez.pdf">cv</a>
   </nav>
 </header>
 
