--- a/publications.html
+++ b/publications.html
@@ -1,58 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Erik Alvarez – Publications</title>
-  <link rel="icon" href="favicon.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <style>
-    body {
-      font-family: 'Helvetica Neue', sans-serif;
-      margin: 0;
-    }
-    header {
-      display: flex;
-      justify-content: space-between;
-      padding: 1em 2em;
-      border-bottom: 1px solid #eee;
-    }
-    .left-icons a, .nav-links a {
-      margin: 0 10px;
-      text-decoration: none;
-      color: black;
-    }
-    .nav-links a:hover, .nav-links a.active {
-      color: mediumvioletred;
-    }
-    h1 {
-      text-align: center;
-      margin-top: 1em;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Publications - Erik F. Alvarez</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <div class="left-icons">
-      <a href="mailto:you@example.com"><i class="fas fa-envelope"></i></a>
-      <a href="https://orcid.org/your-orcid"><i class="fab fa-orcid"></i></a>
-      <a href="https://github.com/erikfilias"><i class="fab fa-github"></i></a>
-      <a href="https://linkedin.com/in/yourprofile"><i class="fab fa-linkedin"></i></a>
-    </div>
-    <nav class="nav-links">
-      <a href="index.html">about</a>
-      <a href="publications.html" class="active">publications</a>
-      <a href="cv.pdf">cv</a>
+    <h1>Publications</h1>
+    <nav>
+      <a href="index.html">About</a>
+      <a href="publications.html" class="active">Publications</a>
+      <a href="CV - Erik Alvarez.pdf">CV</a>
     </nav>
   </header>
 
-  <h1>Publications</h1>
+  <main>
+    <section>
+      <h2>2024</h2>
+      <ul>
+        <li>
+          <strong><a href="https://doi.org/10.1016/j.ijepes.2023.110048" target="_blank">Model-based energy planning: A methodology to choose and combine models to support policy decisions</a></strong><br>
+          D.S. Oliveira, S. Lumbreras, E.F. Alvarez, A. Ramos, L. Olmos<br>
+          <em>International Journal of Electrical Power & Energy Systems</em>, 2024
+        </li>
+        <li>
+          <strong><a href="https://doi.org/10.1016/j.segan.2023.101413" target="_blank">An optimal expansion planning of power systems considering cycle-based AC optimal power flow</a></strong><br>
+          E.F. Alvarez, J.C. López, L. Olmos, A. Ramos<br>
+          <em>Sustainable Energy, Grids and Networks</em>, 2024
+        </li>
+        <li>
+          <strong><a href="https://doi.org/10.1109/EEM54602.2024.101413" target="_blank">Self-Scheduling for a Hydrogen-Based Virtual Power Plant in Day-Ahead Energy and Reserve Electricity Markets</a></strong><br>
+          E.F. Alvarez, P. Sánchez-Martín, A. Ramos<br>
+          <em>20th International Conference on the European Energy Market (EEM)</em>, 2024
+        </li>
+      </ul>
+    </section>
 
-  <section>
-    <ul>
-      <li>“Paper Title 1” – Journal Name, 2023</li>
-      <li>“Paper Title 2” – Conference Name, 2022</li>
-    </ul>
-  </section>
+    <section>
+      <h2>2022</h2>
+      <ul>
+        <li>
+          <strong><a href="https://doi.org/10.1016/j.epsr.2022.108480" target="_blank">Values and impacts of incorporating local flexibility services in transmission expansion planning</a></strong><br>
+          E.F. Alvarez, L. Olmos, A. Ramos, K. Antoniadou-Plytaria, D. Steen, L.A. Tuan<br>
+          <em>Electric Power Systems Research</em>, 2022
+        </li>
+        <li>
+          <strong><a href="https://doi.org/10.1016/j.softx.2022.101070" target="_blank">openTEPES: open-source transmission and generation expansion planning</a></strong><br>
+          A. Ramos, E.F. Alvarez, S. Lumbreras<br>
+          <em>SoftwareX</em>, 2022
+        </li>
+        <li>
+          <strong><a href="https://doi.org/10.3390/su14116746" target="_blank">The human factor in transmission network expansion planning: The grid that a sustainable energy system needs</a></strong><br>
+          S. Lumbreras, J.D. Gómez, E.F. Alvarez, S. Huclin<br>
+          <em>Sustainability</em>, 2022
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>2021</h2>
+      <ul>
+        <li>
+          <strong><a href="https://doi.org/10.12688/openreseurope.13633.2" target="_blank">pyam: Analysis and visualisation of integrated assessment and macro-energy scenarios</a></strong><br>
+          D. Huppmann, M.J. Gidden, Z. Nicholls, J. Hörsch, R. Lamboll, P.N. Kishimoto, E.F. Alvarez, et al.<br>
+          <em>Open Research Europe</em>, 2021
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>2020</h2>
+      <ul>
+        <li>
+          <strong><a href="https://doi.org/10.1049/iet-gtd.2019.1201" target="_blank">Semidefinite Relaxation and Generalized Benders Decomposition to Solve the Transmission Expansion Network and Reactive Power Planning</a></strong><br>
+          M.J. Rider, E.F. Alvarez, M. Paredes<br>
+          <em>IET Generation, Transmission & Distribution</em>, 2020
+        </li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>2019</h2>
+      <ul>
+        <li>
+          <strong><a href="https://doi.org/10.1109/PTC.2019.8810740" target="_blank">A stochastic market-clearing model using semidefinite relaxation</a></strong><br>
+          E.F. Alvarez, J.C. López, P.P. Vergara, J.J. Chavez, M.J. Rider<br>
+          <em>IEEE Milan PowerTech</em>, 2019
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>For a complete and up-to-date list of publications, please visit my <a href="https://scholar.google.com/citations?user=iextGGkAAAAJ&hl=en" target="_blank">Google Scholar profile</a>.</p>
+  </footer>
 </body>
 </html>
