--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         margin-top: 1em;
       }
 
+      h1, h2 {
+        color: #007e7a; /* Blue Esmeralda tone */
+        }
+
+
       .name {
         font-family: 'Poppins', sans-serif;
         font-size: 2.8em;
