--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <nav class="nav-links">
     <a href="#about" class="active">about</a>
-    <a href="#publications.html">publications</a>
+    <a href="publications.html" class="active">Publications</a>
     <a href="CV - Erik Alvarez.pdf">cv</a>
   </nav>
 </header>
