--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
         margin-top: 1em;
       }
 
-      h1, h2 {
-        color: #007e7a; /* Blue Esmeralda tone */
-        }
-
+      h2 {
+      color: #007e7a;
+      }
 
       .name {
         font-family: 'Poppins', sans-serif;
