--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@
         margin-top: 1em;
       }
 
-      h2 {
-      color: #007e7a;
-      }
+        h2 {
+          color: #007e7a; /* blue esmeralda */
+          font-size: 1.4em;
+          margin-top: 2em;
+          border-bottom: 1px solid #eee;
+          padding-bottom: 0.2em;
+        }
 
       .name {
         font-family: 'Poppins', sans-serif;
