--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       .nav-links a.active,
       .nav-links a:hover {
-        color: mediumvioletred;
+        color: #007e7a;
         font-weight: bold;
       }
 
@@ -51,14 +51,6 @@
         font-size: 2.6em;
         margin-top: 1em;
       }
-
-        h2 {
-          color: #007e7a; /* blue esmeralda */
-          font-size: 1.4em;
-          margin-top: 2em;
-          border-bottom: 1px solid #eee;
-          padding-bottom: 0.2em;
-        }
 
       .name {
         font-family: 'Poppins', sans-serif;
