--- a/publications.html
+++ b/publications.html
@@ -30,7 +30,7 @@
   }
 
   .publication button:hover {
-    background-color: #005f5c;
+    background-color: #007e7a;
   }
 
   .abstract, .bibtex {
