--- a/publications.html
+++ b/publications.html
@@ -8,6 +8,61 @@
   <link rel="icon" href="favicon.png" />
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet" />
 <style>
+          body {
+        font-family: Georgia, serif;
+        max-width: 700px;
+        margin: 2em auto;
+        padding: 0 1em;
+        line-height: 1.6;
+<!--        text-align: center; /* This centers text inside the body */-->
+        }
+
+
+      .top-nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1em 2em;
+        border-bottom: 1px solid #eee;
+      }
+
+      .left-icons a {
+        margin-right: 10px;
+        color: black;
+        text-decoration: none;
+        font-size: 1.2em;
+      }
+
+      .nav-links a {
+        margin-left: 20px;
+        text-decoration: none;
+        color: black;
+        font-weight: 400;
+      }
+
+      .nav-links a.active,
+      .nav-links a:hover {
+        color: #007e7a;
+        font-weight: bold;
+      }
+
+      h1.name {
+        text-align: center;
+        font-size: 2.6em;
+        margin-top: 1em;
+      }
+
+      .name {
+        font-family: 'Poppins', sans-serif;
+        font-size: 2.8em;
+        margin-bottom: 0.2em;
+      }
+      .firstname {
+        font-weight: 700; /* bold */
+      }
+      .lastname {
+        font-weight: 400; /* italic */
+      }
   .publication {
     margin: 1.5em 0;
     text-indent: -1.5em;
