--- a/publications.html
+++ b/publications.html
@@ -107,12 +107,21 @@
 
 </head>
 <body>
+<header class="top-nav">
+  <div class="left-icons">
+    <a href="mailto:erik.alvarez@ri.se" title="Email"><i class="fas fa-envelope"></i></a>
+    <a href="https://orcid.org/0000-0003-3862-9747" title="ORCID"><i class="fab fa-orcid"></i></a>
+    <a href="https://scholar.google.com/citations?user=iextGGkAAAAJ&hl=en" title="Google Scholar"><i class="fab fa-google"></i></a>
+    <a href="https://github.com/erikfilias" title="GitHub"><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/erik-alvarez-29235b84/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+  </div>
 
-  <nav>
-    <a href="index.html">about</a>
-    <a href="publications.html" class="active">publications</a>
-    <a href="cv.pdf">cv</a>
+  <nav class="nav-links">
+    <a href="#about" class="active">about</a>
+    <a href="publications.html" class="active">Publications</a>
+    <a href="CV - Erik Alvarez.pdf">cv</a>
   </nav>
+</header>
 
   <h1>Publications</h1>
 
