--- a/publications.html
+++ b/publications.html
@@ -117,7 +117,7 @@
   </div>
 
   <nav class="nav-links">
-    <a href="#about" class="active">about</a>
+    <a href="index.html" class="active">about</a>
     <a href="publications.html" class="active">Publications</a>
     <a href="CV - Erik Alvarez.pdf">cv</a>
   </nav>
