--- a/index.html
+++ b/index.html
@@ -64,6 +64,34 @@
       .lastname {
         font-weight: 400; /* italic */
       }
+
+      .profile-container {
+          display: flex;
+          flex-wrap: wrap;
+          gap: 1.5em;
+          align-items: flex-start;
+          margin-bottom: 2em;
+        }
+
+        .profile-container img {
+          max-width: 100%;
+          border-radius: 8px;
+          box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .headshot {
+          flex: 1 1 200px;
+          max-width: 220px;
+        }
+
+        .hammock {
+          flex: 1 1 200px;
+          max-width: 300px;
+        }
+
+        .bio-text {
+          flex: 2 1 400px;
+        }
   </style>
 </head>
 <body>
@@ -87,10 +115,10 @@
 <!--  <p>I'm a researcher at RISE working on optimization and planning of power systems.</p>-->
   <p><a href="https://www.ri.se/sv/">RISE Research Institutes of Sweden</a></p>
 
-  <p>Email: yourname [at] domain [dot] com</p>
-  <p><a href="https://www.linkedin.com/in/erik-alvarez-29235b84/">LinkedIn</a> |
-     <a href="https://github.com/erikfilias">GitHub</a> |
-     <a href="cv.pdf">CV</a></p>
+<!--  <p>Email: yourname [at] domain [dot] com</p>-->
+<!--  <p><a href="https://www.linkedin.com/in/erik-alvarez-29235b84/">LinkedIn</a> |-->
+<!--     <a href="https://github.com/erikfilias">GitHub</a> |-->
+<!--     <a href="cv.pdf">CV</a></p>-->
 
   <h2>Research Interests</h2>
   <ul>
