--- a/index.html
+++ b/index.html
@@ -115,6 +115,23 @@
 <!--  <p>I'm a researcher at RISE working on optimization and planning of power systems.</p>-->
   <p><a href="https://www.ri.se/sv/">RISE Research Institutes of Sweden</a></p>
 
+<div class="profile-container">
+  <img src="headshot.jpg" alt="Erik Alvarez headshot" class="headshot">
+  <div class="bio-text">
+    <p>
+      Dr. Erik F. Alvarez is a researcher in the Electric Power Systems Unit at
+      <a href="https://www.ri.se/en">RISE Research Institutes of Sweden</a>. His work focuses on the modeling and optimization of power systems, with an emphasis on flexibility resources, long-term transmission expansion planning, and the integration of distributed energy resources.
+    </p>
+    <p>
+      Before joining RISE, Erik earned his Ph.D. at Comillas Pontifical University. He also holds an M.Sc. from UNICAMP and a B.Sc. from the National University of Engineering in Peru.
+    </p>
+    <p>
+      In his free time, Erik enjoys running, swimming, board games — and relaxing outdoors.
+    </p>
+  </div>
+<!--  <img src="hammock.png" alt="Erik relaxing in a hammock" class="hammock">-->
+</div>
+
 <!--  <p>Email: yourname [at] domain [dot] com</p>-->
 <!--  <p><a href="https://www.linkedin.com/in/erik-alvarez-29235b84/">LinkedIn</a> |-->
 <!--     <a href="https://github.com/erikfilias">GitHub</a> |-->
