--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   <nav class="nav-links">
     <a href="index.html" class="active">about</a>
-    <a href="publications.html" class="active">Publications</a>
+    <a href="publications.html">Publications</a>
     <a href="CV - Erik Alvarez.pdf">cv</a>
   </nav>
 </header>
