--- a/index.html
+++ b/index.html
@@ -65,32 +65,24 @@
         font-weight: 400; /* italic */
       }
 
-      .profile-container {
+        .bio-wrapper {
           display: flex;
           flex-wrap: wrap;
-          gap: 1.5em;
           align-items: flex-start;
+          justify-content: space-between;
+          gap: 2em;
           margin-bottom: 2em;
         }
 
-        .profile-container img {
-          max-width: 100%;
-          border-radius: 8px;
-          box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .headshot {
-          flex: 1 1 200px;
-          max-width: 220px;
-        }
-
-        .hammock {
-          flex: 1 1 200px;
-          max-width: 300px;
-        }
-
         .bio-text {
-          flex: 2 1 400px;
+          flex: 1 1 300px;
+        }
+
+        .bio-photo {
+          flex: 0 0 160px;
+          max-width: 160px;
+          border-radius: 8px;
+          box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
   </style>
 </head>
@@ -115,11 +107,11 @@
 <!--  <p>I'm a researcher at RISE working on optimization and planning of power systems.</p>-->
   <p><a href="https://www.ri.se/sv/">RISE Research Institutes of Sweden</a></p>
 
-<div class="profile-container">
+<div class="bio-wrapper">
   <img src="headshot.jpg" alt="Erik Alvarez headshot" class="headshot">
   <div class="bio-text">
     <p>
-      Dr. Erik F. Alvarez is a researcher in the Electric Power Systems Unit at
+      Erik F. Alvarez is a researcher in the Electric Power Systems Unit at
       <a href="https://www.ri.se/en">RISE Research Institutes of Sweden</a>. His work focuses on the modeling and optimization of power systems, with an emphasis on flexibility resources, long-term transmission expansion planning, and the integration of distributed energy resources.
     </p>
     <p>
