--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         }
 
         .bio-photo {
-          flex: 0 0 160px;
-          max-width: 160px;
+          flex: 0 0 100px;
+          max-width: 100px;
           border-radius: 8px;
           box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
@@ -114,6 +114,7 @@
       Erik F. Alvarez is a researcher in the Electric Power Systems Unit at
       <a href="https://www.ri.se/en">RISE Research Institutes of Sweden</a>. His work focuses on the modeling and optimization of power systems, with an emphasis on flexibility resources, long-term transmission expansion planning, and the integration of distributed energy resources.
     </p>
+    <img src="headshot.jpg" alt="Erik Alvarez headshot" class="headshot">
     <p>
       Before joining RISE, Erik earned his Ph.D. at Comillas Pontifical University. He also holds an M.Sc. from UNICAMP and a B.Sc. from the National University of Engineering in Peru.
     </p>
