--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@
           margin-bottom: 2em;
         }
 
-        .bio-text {
-          flex: 1 1 300px;
+        .bio-text img {
+          float: right;
+          margin: 0 0 1em 1.5em;
+          max-width: 160px;
+          border-radius: 8px;
+          box-shadow: 0 2px 6px rgba(0,0,0,0.1);
         }
 
         .bio-photo {
@@ -107,14 +111,15 @@
 <!--  <p>I'm a researcher at RISE working on optimization and planning of power systems.</p>-->
   <p><a href="https://www.ri.se/sv/">RISE Research Institutes of Sweden</a></p>
 
-<div class="bio-wrapper">
-  <img src="headshot.jpg" alt="Erik Alvarez headshot" class="headshot">
+<!--<div class="bio-wrapper">-->
+
   <div class="bio-text">
+      <img src="headshot.jpg" alt="Erik Alvarez headshot" class="headshot">
     <p>
       Erik F. Alvarez is a researcher in the Electric Power Systems Unit at
       <a href="https://www.ri.se/en">RISE Research Institutes of Sweden</a>. His work focuses on the modeling and optimization of power systems, with an emphasis on flexibility resources, long-term transmission expansion planning, and the integration of distributed energy resources.
     </p>
-    <img src="headshot.jpg" alt="Erik Alvarez headshot" class="headshot">
+
     <p>
       Before joining RISE, Erik earned his Ph.D. at Comillas Pontifical University. He also holds an M.Sc. from UNICAMP and a B.Sc. from the National University of Engineering in Peru.
     </p>
@@ -123,7 +128,7 @@
     </p>
   </div>
 <!--  <img src="hammock.png" alt="Erik relaxing in a hammock" class="hammock">-->
-</div>
+<!--</div>-->
 
 <!--  <p>Email: yourname [at] domain [dot] com</p>-->
 <!--  <p><a href="https://www.linkedin.com/in/erik-alvarez-29235b84/">LinkedIn</a> |-->
