--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
         .bio-text img {
           float: right;
           margin: 0 0 1em 1.5em;
-          max-width: 160px;
-          border-radius: 8px;
-          box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+          width: 160px;
+          height: 160px;
+          object-fit: cover;
+          border-radius: 50%; /* makes it circular */
+          box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
 
         .bio-photo {
