--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       }
 
       h1.name {
-        text-align: center;
+        text-align: left;
         font-size: 2.6em;
         margin-top: 1em;
       }
