--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <img src="headshot.jpg" alt="Erik Alvarez headshot" class="headshot">
     <p>
       Erik F. Alvarez is a researcher in the Electric Power Systems Unit at
-      <a href="https://www.ri.se/en">RISE Research Institutes of Sweden</a>. His work focuses on the modeling and optimization of power systems, with an emphasis on flexibility resources, long-term transmission expansion planning, and the integration of distributed energy resources.
+      <a href="https://www.ri.se/en">RISE</a>. His work focuses on the modeling and optimization of power systems, with an emphasis on flexibility resources, long-term transmission expansion planning, and the integration of distributed energy resources.
     </p>
 
     <p>
