--- a/index.html
+++ b/index.html
@@ -118,32 +118,30 @@
   <div class="bio-text">
       <img src="headshot.jpg" alt="Erik Alvarez headshot" class="headshot">
     <p>
-      Erik F. Alvarez is a researcher in the Electric Power Systems Unit at
-      <a href="https://www.ri.se/en">RISE</a>. His work focuses on the modeling and optimization of power systems, with an emphasis on flexibility resources, long-term transmission expansion planning, and the integration of distributed energy resources.
+      Erik F. Alvarez is a researcher in the
+      <a href="https://www.ri.se/sv/expertisomraden/expertiser/kraftsystemsanalys"> Electric Power System Unit</a> at
+      <a href="https://www.ri.se/en">RISE</a>, where he focuses on the modeling and optimization of power systems.
+      His work addresses focuses flexibility resources, market clearing, long-term transmission expansion planning, and the integration of distributed energy resources, with a particular interest in uncertainty management and regulatory frameworks.
     </p>
 
     <p>
-      Before joining RISE, Erik earned his Ph.D. at Comillas Pontifical University. He also holds an M.Sc. from UNICAMP and a B.Sc. from the National University of Engineering in Peru.
+      Prior to joining RISE, Erik completed his Ph.D. in Electrical Energy at
+      <a  href="https://www.comillas.edu/">Universidad Pontificia Comillas</a> in Madrid, Spain, under the guidance of
+      <a href="https://pascua.iit.comillas.edu/aramos/">Dr. Andrés Ramos Galán</a> and
+      <a href="https://www.iit.comillas.edu/personas/olmos">Dr. Luis Olmos Camacho</a>. His doctoral research contributed to the field of transmission expansion planning by improving mathematical modeling to incorporate a refined representation of the electricity network, flexibility, uncertainty and sector coupling — including the roles of utility-scale storage, and distributed flexibility. He also contributed on the development and maintenance of open-source energy modelling tools such as <a href="https://github.com/IIT-EnergySystemModels/openTEPES">openTEPES</a>. At the same he worked as a research assistant at the <a href="https://www.iit.comillas.edu/">Institute for Research in Technology</a> (IIT) in Madrid, Spain.
+      Erik also holds a M.Sc. in Electrical Engineering from <a href="https://unicamp.br/">Universidade Estadual de Campinas</a> in Campinas, São Paulo, Brazil, under the supervision of the <a href="https://mjrider.fee.unicamp.br/">Dr. Marcos J. Rider</a>. His thesis work focused on the development of optimisation models for the transmission expansion planning and stochastic market clearing using convex relaxations such as semidefinite relaxation to transform typically non-convex problems into a semidefinite (convex) programing problems considering the integration of renewable energy sources.
+      And, he also holds an B.Sc. in Mechanical and Electrical Engineering from the <a href="https://portal.uni.edu.pe/">Universidad Nacional de Ingeniería</a> in Lima, Peru.
     </p>
     <p>
-      In his free time, Erik enjoys running, swimming, board games — and relaxing outdoors.
+      Between his M.Sc. and B.Sc., he gained practical experience in the Peruvian electricity sector working in the Transmission Expansion Planning Sub-Division of the <a href="https://www.coes.org.pe/Portal/">Peruvian Independent System Operator (COES-SINAC)</a>, focusing on system planning and operational analysis.
+    </p>
+    <p>
+          In his spare time, Erik enjoys swimming, running, board games and especially listening to music. He is also passionate about collaborative open source research, the role of clean energy systems in sustainable development and finance strategies.
+    </p>
+    <p>
+      <b>Research interests:</b> integrated expansion planning; electricity markets, optimal power flow, uncertainty management; integration of DERs; sector coupling; long duration energy storage; system flexibility; open-source energy modeling
     </p>
   </div>
-<!--  <img src="hammock.png" alt="Erik relaxing in a hammock" class="hammock">-->
-<!--</div>-->
-
-<!--  <p>Email: yourname [at] domain [dot] com</p>-->
-<!--  <p><a href="https://www.linkedin.com/in/erik-alvarez-29235b84/">LinkedIn</a> |-->
-<!--     <a href="https://github.com/erikfilias">GitHub</a> |-->
-<!--     <a href="cv.pdf">CV</a></p>-->
-
-  <h2>Research Interests</h2>
-  <ul>
-    <li>Transmission expansion planning</li>
-    <li>Stochastic optimization</li>
-    <li>Electricity markets</li>
-    <li>Sector coupling and energy systems integration</li>
-  </ul>
 
   <h2>Recent Projects</h2>
   <p>I'm involved in projects like:</p>
