--- a/index.html
+++ b/index.html
@@ -146,14 +146,15 @@
     </p>
   </div>
 
-  <h2>Recent Projects</h2>
-  <p>I'm involved in projects like:</p>
-  <ul>
-    <li><strong>NordForsk</strong> – No-regret investments under uncertainty</li>
-    <li><strong>EnergyFlex-SE</strong> – Flexibility from distributed energy resources</li>
-  </ul>
+  <h2>News</h2>
+  <p>Coming soon...</p>
+<!--  <p>I'm involved in projects like:</p>-->
+<!--  <ul>-->
+<!--    <li><strong>NordForsk</strong> – No-regret investments under uncertainty</li>-->
+<!--    <li><strong>EnergyFlex-SE</strong> – Flexibility from distributed energy resources</li>-->
+<!--  </ul>-->
 
-  <h2>Publications</h2>
+  <h2>Selected Publications</h2>
   <p>Coming soon...</p>
 </body>
 </html>
