--- a/publications.html
+++ b/publications.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Publications – Erik F. Alvarez</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="icon" href="favicon.png" />
+  <link rel="icon" type="image/png" href="icon.png">
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet" />
 <style>
           body {
@@ -91,7 +91,7 @@
   .abstract, .bibtex {
     display: none;
     background-color: #f9f9f9;
-    padding: 1.5em;
+    padding: 2.0em;
     margin-top: 0.5em;
     font-size: 0.95em;
     border-left: 3px solid #007e7a;
