--- a/publications.html
+++ b/publications.html
@@ -127,8 +127,8 @@
 
   <h2>2024</h2>
   <div class="publication">
-    E.F. Alvarez, J.C. López, et al. <em>An optimal expansion planning of power systems considering cycle-based AC optimal power flow</em>. SEGAN, 2024.
-    <a href="https://doi.org/10.1016/j.segan.2023.101413" target="_blank">doi</a>
+    <b>Erik F. Alvarez</b>, J.C. López, Andrés Ramos, Luis Olmos. <em>An optimal expansion planning of power systems considering cycle-based AC optimal power flow</em>. Sustainable Energy, Grids and Networks, 2024.
+    <a href="https://doi.org/10.1016/j.segan.2024.101413" target="_blank">doi</a>
 
     <div class="buttons">
       <button onclick="toggle('abs1')">ABS</button>
@@ -136,16 +136,20 @@
     </div>
 
     <div class="abstract" id="abs1">
-      This paper proposes a transmission expansion planning model that incorporates a cycle-based formulation of AC optimal power flow...
+      This paper presents a novel mixed-integer linear optimization formulation of the AC network-constrained, cost-based, integrated expansion planning problem. The formulation is used to determine the investment needs per technology including the location and sizing of new generation, energy storage, and transmission network assets in a future low-carbon power system. To reduce the size of the resulting problem, the AC optimal power flow (AC-OPF) model is represented in a compact way using cycle constraints. A bound tightening procedure is also considered to reduce the search space and improve the solver performance by adjusting the voltage bounds within the AC-OPF. Contrary to typically used formulations of the integrated expansion planning problem, the constraints considered here include all main aspects of system operation, namely unit commitment, energy storage system management, AC-OPF, and reactive power compensation. Thus, in this paper, we examine how both the proposed transmission expansion modeling developments and the interrelation of the integrated planning constraints affect the computation of the solution to the expansion planning problem. The performance of this formulation is assessed on the RTS-GMLC test system by computing the expansion plan and comparing it with the results of three other expansion planning formulations most frequently employed in the recent literature to address the integrated expansion planning problem for medium to large-scale systems. Expansion plans are computed and compared for different case studies and multiple scenarios. According to the comparative analysis, neglecting the AC-OPF or the unit commitment constraints can increase the total system costs by 7.10%–9.57% or 6.29%–8.39%, respectively. Unlike other modeling approaches, the proposed approach does not rely on simplifications that impact the quality of the solution. Thanks to the incorporated cycle-based AC-OPF constraints and the consideration of a bound tightening procedure, the computation time is reduced by 17.67%–27.21%.
     </div>
 
     <div class="bibtex" id="bib1">
-      @article{alvarez2024acopf,<br>
-      &nbsp;&nbsp;title={An optimal expansion planning of power systems considering cycle-based AC optimal power flow},<br>
-      &nbsp;&nbsp;author={Alvarez, E.F. and López, J.C. and Olmos, L. and Ramos, A.},<br>
-      &nbsp;&nbsp;journal={Sustainable Energy, Grids and Networks},<br>
-      &nbsp;&nbsp;year={2024},<br>
-      &nbsp;&nbsp;doi={10.1016/j.segan.2023.101413}<br>
+      @article{ALVAREZ2024101413,<br>
+        title = {An optimal expansion planning of power systems considering cycle-based AC optimal power flow},<br>
+        journal = {Sustainable Energy, Grids and Networks},<br>
+        volume = {39},<br>
+        pages = {101413},<br>
+        year = {2024},<br>
+        issn = {2352-4677},<br>
+        doi = {https://doi.org/10.1016/j.segan.2024.101413},<br>
+        url = {https://www.sciencedirect.com/science/article/pii/S2352467724001425},<br>
+        author = {Erik F. Alvarez and Juan Camilo López and Luis Olmos and Andres Ramos}<br>
       }
     </div>
   </div>
