--- a/publications.html
+++ b/publications.html
@@ -127,7 +127,7 @@
 
   <h2>2024</h2>
   <div class="publication">
-    <b>Erik F. Alvarez</b>, J.C. López, Andrés Ramos, Luis Olmos. <em>An optimal expansion planning of power systems considering cycle-based AC optimal power flow</em>. Sustainable Energy, Grids and Networks, 2024.
+    <b>Erik F. Alvarez</b>, Juan Camilo López, Andrés Ramos, Luis Olmos. <em>An optimal expansion planning of power systems considering cycle-based AC optimal power flow</em>. Sustainable Energy, Grids and Networks, 2024.
     <a href="https://doi.org/10.1016/j.segan.2024.101413" target="_blank">doi</a>
 
     <div class="buttons">
@@ -150,6 +150,34 @@
         doi = {https://doi.org/10.1016/j.segan.2024.101413},<br>
         url = {https://www.sciencedirect.com/science/article/pii/S2352467724001425},<br>
         author = {Erik F. Alvarez and Juan Camilo López and Luis Olmos and Andres Ramos}<br>
+      }
+    </div>
+  </div>
+
+  <div class="publication">
+    Dilayne Santos Oliveira, Sara Lumbreras, <b>Erik F. Alvarez</b>, Andrés Ramos, Luis Olmos. <em>Model-based energy planning: A methodology to choose and combine models to support policy decisions</em>. International Journal of Electrical Power & Energy Systems, 2024.
+    <a href="https://doi.org/10.1016/j.ijepes.2024.110048" target="_blank">doi</a>
+
+    <div class="buttons">
+      <button onclick="toggle('abs2')">ABS</button>
+      <button onclick="toggle('bib2')">BIB</button>
+    </div>
+
+    <div class="abstract" id="abs2">
+      Long-term energy planning increasingly relies on mathematical models offering quantitative insight to support complex policy decisions. However, the increase in their use has meant the proliferation of tools developed at different institutions, with various scopes, dealing with specific aspects of the economy, the power sector, or the climate, with mismatches in temporal or geographic resolution. All this creates a need for using several models concurrently, integrating them to generate a complete perspective on the implications of policy decisions on the energy transition. This article proposes a methodology to categorize and combine energy models and develop a manipulation strategy to answer a target research question. Thus, it gives a formal structure to tasks carried out informally −and suboptimally- in virtually any energy planning project. This methodology is based on structured modeling, a formal mathematical theory conceived for representing and manipulating models. It assumes a soft-linking approach, meaning the models share information without integrating them within the same platform or code. This framework was developed within the European project openENTRANCE, which will develop, use, and disseminate an open, transparent, and integrated modeling platform for assessing low-carbon transition pathways in Europe.
+    </div>
+
+    <div class="bibtex" id="bib2">
+      @article{SANTOSOLIVEIRA2024110048,<br>
+        title = {Model-based energy planning: A methodology to choose and combine models to support policy decisions},<br>
+        journal = {International Journal of Electrical Power & Energy Systems},<br>
+        volume = {159},<br>
+        pages = {110048},<br>
+        year = {2024},<br>
+        issn = {0142-0615},<br>
+        doi = {https://doi.org/10.1016/j.ijepes.2024.110048},<br>
+        url = {https://www.sciencedirect.com/science/article/pii/S0142061524002692},<br>
+        author = {Dilayne {Santos Oliveira} and Sara Lumbreras and Erik F. Alvarez and Andrés Ramos and Luis Olmos},<br>
       }
     </div>
   </div>
